--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom/client": "18.3.1",
-    "lucide-react": "0.400.0",
-    "recharts": "2.12.7",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "lucide-react": "^0.525.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
